--- a/Sub/FavArti/FavArti/index.html
+++ b/Sub/FavArti/FavArti/index.html
@@ -27,7 +27,7 @@
          <h1>Eientei</h1>
                  <nav>
                      <ul>
-                         <li><a href="/main/index1.html">Home</a></li>
+                         <li><a href="/index1.html">Home</a></li>
                          <li><a href="/main/Sub/FavArti/FavArti/index.html">FavArti</a></li>
                          <li><a href="/main/Sub/Canteen/Canteen_/index.html">Canteen Article</a></li>
                          <li><a href="/main/Sub/SHIN-MP3Web/index.html">MP3 Player</a></li>
