--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eientei</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style1.css">
     <link rel="icon" href="Pics/Touhou.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,9 +29,9 @@
                  <nav>
                      <ul>
                          <li><a href="index1.html">Home</a></li>
-                         <li><a href="Sub/FavArti/FavArti/index.html">FavArti</a></li>
-                         <li><a href="Sub/Canteen/Canteen_/index.html">Canteen Article</a></li>
-                         <li><a href="Sub/SHIN-MP3Web/index.html">MP3 Player</a></li>
+                         <li><a href="index2.html">FavArti</a></li>
+                         <li><a href="index3.html">Canteen Article</a></li>
+                         <li><a href="index4.html">MP3 Player</a></li>
                          <li><a href="Contact.html">Contact Us</a></li>
                          <li id="logout-btn">Log Out<li>
                      </ul>
