--- a/index4.html
+++ b/index4.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHIN MP3</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="Misc/pics/Touhou.png">
+  <link rel="stylesheet" href="css/style4.css">
+  <link rel="icon" href="Sub/Misc/pics/Touhou.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -28,12 +28,12 @@
      <h1>Eientei</h1>
              <nav>
                  <ul>
-                     <li><a href="/index1.html">Home</a></li>
-                     <li><a href="/Sub/FavArti/FavArti/index.html">FavArti</a></li>
-                     <li><a href="/Sub/Canteen/Canteen_/index.html">Canteen Article</a></li>
-                     <li><a href="/Sub/SHIN-MP3Web/index.html">MP3 Player</a></li>
-                     <li><a href="/Contact.html">Contact Us</a></li>
-                     <li id="logout-btn">Log Out<li>
+                   <li><a href="index1.html">Home</a></li>
+                   <li><a href="index2.html">FavArti</a></li>
+                   <li><a href="index3.html">Canteen Article</a></li>
+                   <li><a href="index4.html">MP3 Player</a></li>
+                   <li><a href="Contact.html">Contact Us</a></li>
+                   <li id="logout-btn">Log Out<li>
                  </ul>
 
              </nav>
@@ -64,7 +64,7 @@
   </div>
   <!-- Music Player -->
   <div id="player-container">
-    <img id="album-thumbnail" src="Misc/pics/1900x1900-000000-80-0-0.jpg" alt="Album Thumbnail" />
+    <img id="album-thumbnail" src="Sub/Misc/pics/1900x1900-000000-80-0-0.jpg" alt="Album Thumbnail" />
     <audio id="audio-player" autoplay></audio>
     <div id="track-info">
       <h2 id="track-title">Track Title</h2>
@@ -98,67 +98,67 @@
         title: "All Songs",
         artist: "None",
 
-        thumbnail: "Misc/pics/1678472428481.png",
+        thumbnail: "Sub/Misc/pics/1678472428481.png",
         tracks: [
-          { title: "十六夜ゐ", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/十六夜ゐ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
-          { title: "SASURAI", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/_SASURAI_ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
-          { title: "Tabimichi Yoiyoi Yume Hanabi", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/Tabimichi Yoiyoi Yume Hanabi - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
-          { title: "Whatcha;Whatcha Doin", artist: "AliceSoft", src: "Misc/tracks/Whatcha_Whatcha Doin_(MP3_160K)_1.mp3" },
-          { title: "SPARKs", artist: "AliceSoft", src: "Misc/tracks/SPARKs(MP3_160K).mp3" },
-          { title: "あかときやみから", artist: "AliceSoft", src: "Misc/tracks/あかときやみから(MP3_160K).mp3" },
-          { title: "Live in Life ", artist: "Will Stetson", src: "Misc/tracks/Live in Life - Will Stetson [MV] 【Hu Tao Fansong】(MP3_160K).mp3" },
-          { title: "Morality Lesson", artist: "Will Stetsont", src: "Misc/tracks/Morality Lesson - Will Stetson [MV] 【HSR Fansong】(M4A_128K).m4a" },
-          { title: "Writing on the Wall ", artist: "Will Stetson", src: "Misc/tracks/Writing on the Wall - Will Stetson [MV] 【Kaveh Fansong】(MP3_160K).mp3" },
-          { title: "極楽浄土[Gokuraku Jodo]", artist: "GARNiDELiA", src: "Misc/tracks/【みうめ・メイリア・217】極楽浄土[Gokuraku Jodo]  OFFiCiAL(MP3_160K).mp3" },
-          { title: "宵闇胡蝶[Yoiyami Kocho]", artist: "GARNiDELiA", src: "Misc/tracks/【りりちよ・メイリア】宵闇胡蝶[Yoiyami Kocho] OFFiCiAL【踊っちゃってみた第10弾】(MP3_160K).mp3" },
-          { title: "謳歌爛漫[Oka Ramman]", artist: "GARNiDELiA", src: "Misc/tracks/【みうめ・メイリア・217】謳歌爛漫[Oka Ramman] OFFiCiAL【GARNiDELiA】(MP3_160K).mp3" }
+          { title: "十六夜ゐ", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/十六夜ゐ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
+          { title: "SASURAI", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/_SASURAI_ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
+          { title: "Tabimichi Yoiyoi Yume Hanabi", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/Tabimichi Yoiyoi Yume Hanabi - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
+          { title: "Whatcha;Whatcha Doin", artist: "AliceSoft", src: "Sub/Misc/tracks/Whatcha_Whatcha Doin_(MP3_160K)_1.mp3" },
+          { title: "SPARKs", artist: "AliceSoft", src: "Sub/Misc/tracks/SPARKs(MP3_160K).mp3" },
+          { title: "あかときやみから", artist: "AliceSoft", src: "Sub/Misc/tracks/あかときやみから(MP3_160K).mp3" },
+          { title: "Live in Life ", artist: "Will Stetson", src: "Sub/Misc/tracks/Live in Life - Will Stetson [MV] 【Hu Tao Fansong】(MP3_160K).mp3" },
+          { title: "Morality Lesson", artist: "Will Stetsont", src: "Sub/Misc/tracks/Morality Lesson - Will Stetson [MV] 【HSR Fansong】(M4A_128K).m4a" },
+          { title: "Writing on the Wall ", artist: "Will Stetson", src: "Sub/Misc/tracks/Writing on the Wall - Will Stetson [MV] 【Kaveh Fansong】(MP3_160K).mp3" },
+          { title: "極楽浄土[Gokuraku Jodo]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【みうめ・メイリア・217】極楽浄土[Gokuraku Jodo]  OFFiCiAL(MP3_160K).mp3" },
+          { title: "宵闇胡蝶[Yoiyami Kocho]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【りりちよ・メイリア】宵闇胡蝶[Yoiyami Kocho] OFFiCiAL【踊っちゃってみた第10弾】(MP3_160K).mp3" },
+          { title: "謳歌爛漫[Oka Ramman]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【みうめ・メイリア・217】謳歌爛漫[Oka Ramman] OFFiCiAL【GARNiDELiA】(MP3_160K).mp3" }
         ],
-        backgroundImage: "url('Misc/pics/sakura.jpg')"
+        backgroundImage: "url('Sub/Misc/pics/sakura.jpg')"
       },
       {
         title: "Show By Rock",
         artist: "Tsurezurenaru Ayatsuri Mugenan",
 
-        thumbnail: "Misc/pics/1900x1900-000000-80-0-0.jpg",
+        thumbnail: "Sub/Misc/pics/1900x1900-000000-80-0-0.jpg",
         tracks: [
-          { title: "十六夜ゐ", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/十六夜ゐ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
-          { title: "SASURAI", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/_SASURAI_ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
-          { title: "Tabimichi Yoiyoi Yume Hanabi", artist: "徒然なる操り霧幻庵", src: "Misc/tracks/Tabimichi Yoiyoi Yume Hanabi - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" }
+          { title: "十六夜ゐ", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/十六夜ゐ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
+          { title: "SASURAI", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/_SASURAI_ - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" },
+          { title: "Tabimichi Yoiyoi Yume Hanabi", artist: "徒然なる操り霧幻庵", src: "Sub/Misc/tracks/Tabimichi Yoiyoi Yume Hanabi - 徒然なる操り霧幻庵 (Tsurezurenaru Ayatsuri Mugenan)(MP3_160K).mp3" }
         ],
-        backgroundImage: "url('Misc/pics/Tsurezure_naru_live_daru_dayu.webp')"
+        backgroundImage: "url('Sub/Misc/pics/Tsurezure_naru_live_daru_dayu.webp')"
       },
       {
         title: "Dohna Dohna",
         artist: "AliceSoft",
-        thumbnail: "Misc/pics/Antenna.(Dohna.Dohna).full.3598952.jpg",
+        thumbnail: "Sub/Misc/pics/Antenna.(Dohna.Dohna).full.3598952.jpg",
         tracks: [
-          { title: "Whatcha;Whatcha Doin", artist: "AliceSoft", src: "Misc/tracks/Whatcha_Whatcha Doin_(MP3_160K)_1.mp3" },
-          { title: "SPARKs", artist: "AliceSoft", src: "Misc/tracks/SPARKs(MP3_160K).mp3" },
-          { title: "あかときやみから", artist: "AliceSoft", src: "Misc/tracks/あかときやみから(MP3_160K).mp3" }
+          { title: "Whatcha;Whatcha Doin", artist: "AliceSoft", src: "Sub/Misc/tracks/Whatcha_Whatcha Doin_(MP3_160K)_1.mp3" },
+          { title: "SPARKs", artist: "AliceSoft", src: "Sub/Misc/tracks/SPARKs(MP3_160K).mp3" },
+          { title: "あかときやみから", artist: "AliceSoft", src: "Sub/Misc/tracks/あかときやみから(MP3_160K).mp3" }
         ],
-        backgroundImage: "url('Misc/pics/cg1-1-1024x576.jpg')"
+        backgroundImage: "url('Sub/Misc/pics/cg1-1-1024x576.jpg')"
       },
       {
         title: "Will Stetson",
         artist: "Will Stetson",
-        thumbnail: "Misc/pics/download.png",
+        thumbnail: "Sub/Misc/pics/download.png",
         tracks: [
-          { title: "Live in Life ", artist: "Will Stetson", src: "Misc/tracks/Live in Life - Will Stetson [MV] 【Hu Tao Fansong】(MP3_160K).mp3" },
-          { title: "Morality Lesson", artist: "Will Stetsont", src: "Misc/tracks/Morality Lesson - Will Stetson [MV] 【HSR Fansong】(M4A_128K).m4a" },
-          { title: "Writing on the Wall ", artist: "Will Stetson", src: "Misc/tracks/Writing on the Wall - Will Stetson [MV] 【Kaveh Fansong】(MP3_160K).mp3" }
+          { title: "Live in Life ", artist: "Will Stetson", src: "Sub/Misc/tracks/Live in Life - Will Stetson [MV] 【Hu Tao Fansong】(MP3_160K).mp3" },
+          { title: "Morality Lesson", artist: "Will Stetsont", src: "Sub/Misc/tracks/Morality Lesson - Will Stetson [MV] 【HSR Fansong】(M4A_128K).m4a" },
+          { title: "Writing on the Wall ", artist: "Will Stetson", src: "Sub/Misc/tracks/Writing on the Wall - Will Stetson [MV] 【Kaveh Fansong】(MP3_160K).mp3" }
         ],
-        backgroundImage: "url('Misc/pics/459084521_1952439661890361_1712876725948218878_n.jpg')"
+        backgroundImage: "url('Sub/Misc/pics/459084521_1952439661890361_1712876725948218878_n.jpg')"
       },
       {
         title: "GARNiDELiA",
         artist: "GARNiDELiA",
-        thumbnail: "Misc/pics/download5.jfif",
+        thumbnail: "Sub/Misc/pics/download5.jfif",
         tracks: [
-          { title: "極楽浄土[Gokuraku Jodo]", artist: "GARNiDELiA", src: "Misc/tracks/【みうめ・メイリア・217】極楽浄土[Gokuraku Jodo]  OFFiCiAL(MP3_160K).mp3" },
-          { title: "宵闇胡蝶[Yoiyami Kocho]", artist: "GARNiDELiA", src: "Misc/tracks/【りりちよ・メイリア】宵闇胡蝶[Yoiyami Kocho] OFFiCiAL【踊っちゃってみた第10弾】(MP3_160K).mp3" },
-          { title: "謳歌爛漫[Oka Ramman]", artist: "GARNiDELiA", src: "Misc/tracks/【みうめ・メイリア・217】謳歌爛漫[Oka Ramman] OFFiCiAL【GARNiDELiA】(MP3_160K).mp3" }
+          { title: "極楽浄土[Gokuraku Jodo]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【みうめ・メイリア・217】極楽浄土[Gokuraku Jodo]  OFFiCiAL(MP3_160K).mp3" },
+          { title: "宵闇胡蝶[Yoiyami Kocho]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【りりちよ・メイリア】宵闇胡蝶[Yoiyami Kocho] OFFiCiAL【踊っちゃってみた第10弾】(MP3_160K).mp3" },
+          { title: "謳歌爛漫[Oka Ramman]", artist: "GARNiDELiA", src: "Sub/Misc/tracks/【みうめ・メイリア・217】謳歌爛漫[Oka Ramman] OFFiCiAL【GARNiDELiA】(MP3_160K).mp3" }
         ],
-        backgroundImage: "url('Misc/pics/desktop-wallpaper-steam-workshop-garnidelia-garnidelia.jpg')"
+        backgroundImage: "url('Sub/Misc/pics/desktop-wallpaper-steam-workshop-garnidelia-garnidelia.jpg')"
       }
     ];
 
@@ -299,14 +299,14 @@ function selectAlbum(index) {
             // Check if the user is logged in
         if (localStorage.getItem('userLoggedIn') !== 'true') {
             alert('You must log in first.');
-            window.location.href = '/login.html'; // Redirect to login page if not logged in
+            window.location.href = 'login.html'; // Redirect to login page if not logged in
         }
 
         // Log out functionality
         document.getElementById('logout-btn').addEventListener('click', function() {
             localStorage.setItem('userLoggedIn', 'false'); // Set logged-in status to false
             alert('You have logged out.');
-            window.location.href = '/login.html'; // Redirect to login page after logout
+            window.location.href = 'login.html'; // Redirect to login page after logout
         });
             
         </script>
